--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">Succession Expertise for Financial Advisors</h2>
-            <p style="text-align: center;">As the premier M&A Wealth Management Recruiting firm, Succession Point helps Wealth Managers navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today. All at NO COST to you.
+            <p style="text-align: center;">As the premier M&A Wealth Management consulting firm, Succession Point helps Wealth Managers navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today.
 
 </p>
             <a href="#contact" class="btn-get-started">Get Started</a>
@@ -216,7 +216,7 @@
                 <div class="service-item d-flex position-relative h-100" style="border: 1px solid #e9ecef; border-radius: 8px; padding: 20px; transition: all 0.3s;">
                   <i class="bi bi-shield-check icon flex-shrink-0" style="color: #00d9ff; font-size: 2rem; margin-right: 1rem"></i>
                   <div>
-                    <h4 class="title" style="color: var(--heading-color); margin-bottom: 10px;">Zero Cost Guarantee</h4>
+                    <h4 class="title" style="color: var(--heading-color); margin-bottom: 10px;">Zero Cost</h4>
                     <p class="description">Personalized, confidential consultation at absolutely NO COST to advisors. Our compensation comes from the buyer or firm partner, never from you.</p>
                   </div>
                 </div>
@@ -286,7 +286,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1" class="purecounter"></span>
-              <p>$Billion in Deals Closed</p>
+              <p>$Billion in Deals Advised</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -601,8 +601,10 @@
               </div>
               <div class="member-bio">
                 <h5>Founder & CEO</h5>
-                <p>In 1994, Michele founded PRISM Wealth Management Recruiting, an elite consulting firm specialized in the Wealth Management industry. Since its inception, Michele has advised thousands of Financial Advisors and Wealth Management firms, offering her industry knowledge and insights to facilitate their vision of success.</p>
-                <p class="member-email"><i class="bi bi-envelope"></i> michele@successionpoint.com</p>
+                <p>Michele Mandeville, Founder of PRISM Wealth Management Recruiting, established Succession Point in 2018 to meet the emerging need for broad expertise in the Wealth Management M&A, Monetization and Succession space. <br> <br> 
+                  Combining decades of industry consulting, recruiting and marketing expertise, PRISM Wealth Management Recruiting and Succession Point offer customized solutions for Financial Advisors and unparalleled, valuable services as trusted partners to Wealth Management Firms. <br> <br> 
+                  In 1994, Michele founded PRISM Wealth Management Recruiting, an elite consulting firm specialized in the Wealth Management industry.​ Since its inception, Michele has advised thousands of Financial Advisors and Wealth Management firms, offering her industry knowledge and insights to facilitate their vision of success.</p>
+                <p class="member-email"><i class="bi bi-envelope"></i> mmandeville@successionpoint.com</p>
               </div>
             </div>
           </div><!-- End Team Member -->
