--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Who We Serve</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="for-sellers.html">Sellers</a></li>
-              <li><a href="for-buyers.html">Buyers</a></li>
-            </ul>
-          </li>
+          
+          <li><a href="for-sellers.html">Sellers</a></li>
+          <li><a href="for-buyers.html">Buyers</a></li>
+
           <!-- <li><a href="insights.html">Insights</a></li> -->
           <li><a href="#team">Leadership</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
@@ -149,7 +146,7 @@
             <div>
               <h4 class="title">Practice Acquisitions</h4>
               <p class="description">Strategic buyer/seller introductions from a vast advisor network. We help navigate due diligence, funding, and contractual steps for successful acquisitions.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="for-buyers.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -159,7 +156,7 @@
             <div>
               <h4 class="title">Monetiztion Offerings</h4>
               <p class="description">Access 3-16x revenue multiples through strategic partnerships. Monetize fraction or entire practice while retaining your branding and methods.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="for-sellers.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -168,7 +165,7 @@
             <div>
               <h4 class="title">Succession Planning</h4>
               <p class="description">Comprehensive succession planning with 3-8x revenue for full acquisitions. We help identify G2 advisors and structure mutually beneficial deals.</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="for-sellers.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -313,7 +310,7 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-briefcase icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">Buy a Practice</a></h4>
+                <h4 class="title"><a href="for-buyers.html" class="stretched-link">Buy a Practice</a></h4>
                 <p class="description">With 35% of advisors retiring in 8-10 years, capitalize on unprecedented acquisition opportunities. We surgically target your preferences and match you with the right sellers.</p>
               </div>
             </div>
@@ -323,7 +320,7 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-card-checklist icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">Monetize Your Practice</a></h4>
+                <h4 class="title"><a href="for-sellers.html" class="stretched-link">Monetize Your Practice</a></h4>
                 <p class="description">Access 3-16x revenue multiples through Strategic Growth Partnerships. Fund acquisitions, leverage scale, or de-risk while maintaining control.</p>
               </div>
             </div>
@@ -333,7 +330,7 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-bar-chart icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">Sell Your Practice</a></h4>
+                <h4 class="title"><a href="for-sellers.html" class="stretched-link">Sell Your Practice</a></h4>
                 <p class="description">Planning retirement? Receive 3-8x revenue for full acquisitions. We handle valuations, buyer matching, and deal structuring for optimal outcomes.</p>
               </div>
             </div>
@@ -343,7 +340,7 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-binoculars icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">Practice Valuations</a></h4>
+                <h4 class="title"><a href="for-sellers.html" class="stretched-link">Practice Valuations</a></h4>
                 <p class="description">Comprehensive practice analysis to determine fair market value. Understand your worth and position your practice for maximum returns.</p>
               </div>
             </div>
@@ -353,7 +350,7 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-brightness-high icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">G2 Advisor Recruitment</a></h4>
+                <h4 class="title"><a href="for-buyers.html" class="stretched-link">G2 Advisor Recruitment</a></h4>
                 <p class="description">Find the perfect next-generation advisor for optimal client retention and practice longevity. Ensure seamless transitions and continued growth.</p>
               </div>
             </div>
@@ -363,20 +360,13 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-calendar4-week icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">Strategic Partnerships</a></h4>
+                <h4 class="title"><a href="for-sellers.html" class="stretched-link">Strategic Partnerships</a></h4>
                 <p class="description">Access capital, enterprise pricing, HNW resources, and alternatives while retaining your identity. No private equity ownership required.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
 
         </div>
-        
-        <div class="row mt-5">
-          <div class="col-12 text-center">
-            <a href="service-details.html" class="btn btn-primary">View All Services <i class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
-
       </div>
 
     </section><!-- /Services Section -->
