--- a/for-buyers.html
+++ b/for-buyers.html
@@ -33,7 +33,7 @@
 
 <body class="for-buyers-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+    <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -45,13 +45,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Who We Serve</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="for-sellers.html">Sellers</a></li>
-              <li><a href="for-buyers.html">Buyers</a></li>
-            </ul>
-          </li>
+          
+          <li><a href="for-sellers.html">Sellers</a></li>
+          <li><a href="for-buyers.html">Buyers</a></li>
+
           <!-- <li><a href="insights.html">Insights</a></li> -->
           <li><a href="#team">Leadership</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
@@ -499,13 +496,13 @@
     </section><!-- /Call To Action Section -->
 
     <!-- Faq Section -->
-    <section id="faq" class="faq section">
+    <!-- <section id="faq" class="faq section">
 
-      <!-- Section Title -->
+
       <div class="container section-title" data-aos="fade-up">
         <h2>Common Buyer Questions</h2>
         <p>Everything you need to know about acquiring a practice</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container">
 
@@ -541,7 +538,7 @@
 
             </div>
 
-          </div><!-- End Faq Column-->
+          </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
 
@@ -573,13 +570,13 @@
 
             </div>
 
-          </div><!-- End Faq Column-->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Faq Section -->
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section light-background">
@@ -683,7 +680,6 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#about">About us</a></li>
-            <li><a href="service-details.html">Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
           </ul>
