--- a/for-sellers.html
+++ b/for-sellers.html
@@ -30,7 +30,7 @@
 
 <body class="for-sellers-page">
 
-    <header id="header" class="header d-flex align-items-center fixed-top">
+<header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -41,22 +41,23 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#about">About</a></li>
+          <li><a href="index.html#about">About</a></li>
           
           <li><a href="for-sellers.html">Sellers</a></li>
           <li><a href="for-buyers.html">Buyers</a></li>
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="#team">Leadership</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#team">Leadership</a></li>
+          <!-- <li><a href="#testimonials">Testimonials</a></li> -->
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
     </div>
   </header>
+
 
   <main class="main">
 
@@ -351,7 +352,7 @@
             <div class="text-center">
               <h3>Your Practice Deserves Maximum Value</h3>
               <p>You've spent decades building your practice. Don't leave money on the table when it's time to transition. With Succession Point, you get expert M&A guidance, access to our vast buyer network, and aggressive negotiation on your behalf—all at absolutely no cost to you.</p>
-              <a class="cta-btn" href="#contact">Schedule Your Free Consultation</a>
+              <a class="cta-btn" href="index.html#contact">Schedule Your Free Consultation</a>
             </div>
           </div>
         </div>
