--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+    <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -49,16 +49,16 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#about">About</a></li>
+          <li><a href="index.html#about">About</a></li>
           
           <li><a href="for-sellers.html">Sellers</a></li>
           <li><a href="for-buyers.html">Buyers</a></li>
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="#team">Leadership</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#team">Leadership</a></li>
+          <!-- <li><a href="#testimonials">Testimonials</a></li> -->
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -80,7 +80,7 @@
             <p style="text-align: center;">As the premier M&A Wealth Management consulting firm, Succession Point helps Wealth Managers navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today.
 
 </p>
-            <a href="#contact" class="btn-get-started">Get Started</a>
+            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -89,7 +89,7 @@
           <div class="carousel-container">
             <h2 style="text-align: center;">Building Generational Wealth</h2>
             <p style="text-align: center;">There's never been a more exciting time to capture EXTRAORDINARY revenue multiples, access growth accelerators and leverage operational efficiencies. We help elite Financial Advisors maximize their enterprise valuations to fit their ideal practice structure.</p>
-            <a href="#contact" class="btn-get-started">Get Started</a>
+            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -98,7 +98,7 @@
           <div class="carousel-container">
             <h2 style="text-align: center;">3-16x Revenue Multiples</h2>
             <p style="text-align: center;">Monetize fraction or entire practice, continue advising, or retire. Capture enterprise pricing and expanded infrastructure, HNW family office resources. Retain your branding, models, and methods while accessing alternatives and private deals.</p>
-            <a href="#contact" class="btn-get-started">Get Started</a>
+            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -107,7 +107,7 @@
           <div class="carousel-container">
             <h2 style="text-align: center;">30+ Years of Industry Expertise</h2>
             <p style="text-align: center;">With over three decades of experience, we offer PERSONALIZED, CONFIDENTIAL consultation to help you achieve your unique practice objectives. One-on-one consulting to facilitate your buying/selling goals.</p>
-            <a href="#contact" class="btn-get-started">Get Started</a>
+            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -116,7 +116,7 @@
           <div class="carousel-container">
             <h2 style="text-align: center;">The Largest Transfer of Wealth In History</h2>
             <p style="text-align: center;">With 35% of advisors retiring in the next 8-10 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</p>
-            <a href="#contact" class="btn-get-started">Get Started</a>
+            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -421,7 +421,7 @@
             <div class="text-center">
               <h3>Ready to Explore Your Options?</h3>
               <p>Whether you're looking to buy, sell, or monetize your practice, Succession Point provides personalized, confidential consultation at no cost to you. Let's discuss how we can help you achieve your unique practice objectives.</p>
-              <a class="cta-btn" href="#contact">Schedule a Consultation</a>
+              <a class="cta-btn" href="index.html#contact">Schedule a Consultation</a>
             </div>
           </div>
         </div>
