--- a/for-buyers.html
+++ b/for-buyers.html
@@ -33,7 +33,7 @@
 
 <body class="for-buyers-page">
 
-    <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -44,16 +44,16 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#about">About</a></li>
+          <li><a href="index.html#about">About</a></li>
           
           <li><a href="for-sellers.html">Sellers</a></li>
           <li><a href="for-buyers.html">Buyers</a></li>
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="#team">Leadership</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#team">Leadership</a></li>
+          <!-- <li><a href="#testimonials">Testimonials</a></li> -->
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -172,7 +172,7 @@
               <li><i class="bi bi-check-circle"></i> <span>Geographic expansion opportunities</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Talent acquisition through practice purchases</span></li>
             </ul>
-            <a href="#contact" class="read-more"><span>Explore Opportunities</span><i class="bi bi-arrow-right"></i></a>
+            <a href="index.html#contact" class="read-more"><span>Explore Opportunities</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
@@ -487,7 +487,7 @@
             <div class="text-center">
               <h3>Ready to Accelerate Your Growth?</h3>
               <p>The next decade presents an unprecedented opportunity to scale your practice through strategic acquisitions. With our 300,000+ advisor network and proven process, we'll help you identify, evaluate, and acquire practices that align with your growth objectives.</p>
-              <a class="cta-btn" href="#contact">Start Your Acquisition Journey</a>
+              <a class="cta-btn" href="index.html#contact">Start Your Acquisition Journey</a>
             </div>
           </div>
         </div>
