--- a/insights.html
+++ b/insights.html
@@ -51,7 +51,7 @@
             </ul>
           </li>
           <li><a href="insights.html" class="active">Insights</a></li>
-          <li><a href="index.html#team">Leadership</a></li>
+          <li><a href="index.htmlindex.html#team">Leadership</a></li>
           <li><a href="index.html#testimonials">Testimonials</a></li>
           <li><a href="index.html#faq">FAQ</a></li>
           <li><a href="index.html#contact">Contact</a></li>
