--- a/service-details.html
+++ b/service-details.html
@@ -38,7 +38,7 @@
 
 <body class="service-details-page">
 
-    <header id="header" class="header d-flex align-items-center fixed-top">
+<header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -49,22 +49,23 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#about">About</a></li>
+          <li><a href="index.html#about">About</a></li>
           
           <li><a href="for-sellers.html">Sellers</a></li>
           <li><a href="for-buyers.html">Buyers</a></li>
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="#team">Leadership</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#team">Leadership</a></li>
+          <!-- <li><a href="#testimonials">Testimonials</a></li> -->
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
     </div>
   </header>
+
 
   <main class="main">
 
@@ -265,7 +266,7 @@
             <div class="text-center">
               <h3>Ready to Maximize Your Enterprise Value?</h3>
               <p>Whether you're looking to buy, sell, or monetize your practice, Succession Point provides personalized, confidential consultation at no cost to you. Let's discuss how we can help you achieve your unique practice objectives.</p>
-              <a class="cta-btn" href="#contact">Schedule a Consultation</a>
+              <a class="cta-btn" href="index.html#contact">Schedule a Consultation</a>
             </div>
           </div>
         </div>
