--- a/thank-you.html
+++ b/thank-you.html
@@ -195,7 +195,7 @@
             </ul>
           </li>
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="index.html#team">Leadership</a></li>
+          <li><a href="index.htmlindex.html#team">Leadership</a></li>
           <li><a href="index.html#testimonials">Testimonials</a></li>
           <li><a href="index.html#faq">FAQ</a></li>
           <li><a href="index.html#contact">Contact</a></li>
