--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <li><a href="index.html#about">About</a></li>
           
           <li><a href="for-sellers.html">Sellers</a></li>
-          <li><a href="for-buyers.html">Buyers</a></li>
+          <li><a href="for-buyers.html">Buyers</a></li> 
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="index.html#team">Leadership</a></li>
+
           <!-- <li><a href="#testimonials">Testimonials</a></li> -->
           <li><a href="index.html#faq">FAQ</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -74,7 +74,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel"  data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean1.jpg" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">Succession Expertise for Financial Advisors</h2>
             <p style="text-align: center;">As the premier M&A Wealth Management consulting firm, Succession Point helps Wealth Managers navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today.
@@ -85,7 +85,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean2.jpeg" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">Building Generational Wealth</h2>
             <p style="text-align: center;">There's never been a more exciting time to capture EXTRAORDINARY revenue multiples, access growth accelerators and leverage operational efficiencies. We help elite Financial Advisors maximize their enterprise valuations to fit their ideal practice structure.</p>
@@ -94,7 +94,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean3.png" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">3-16x Revenue Multiples</h2>
             <p style="text-align: center;">Monetize fraction or entire practice, continue advising, or retire. Capture enterprise pricing and expanded infrastructure, HNW family office resources. Retain your branding, models, and methods while accessing alternatives and private deals.</p>
@@ -103,7 +103,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-4.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean4.png" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">30+ Years of Industry Expertise</h2>
             <p style="text-align: center;">With over three decades of experience, we offer PERSONALIZED, CONFIDENTIAL consultation to help you achieve your unique practice objectives. One-on-one consulting to facilitate your buying/selling goals.</p>
@@ -112,7 +112,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-5.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean5.png" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">The Largest Transfer of Wealth In History</h2>
             <p style="text-align: center;">With 35% of advisors retiring in the next 8-10 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</p>
@@ -413,7 +413,7 @@
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
-      <img src="assets/img/ocean-water--background.jpg" alt="">
+      <img src="assets/img/Ocean1.jpg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
