--- a/service-details.html
+++ b/service-details.html
@@ -55,7 +55,7 @@
           <li><a href="for-buyers.html">Buyers</a></li>
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="index.html#team">Leadership</a></li>
+
           <!-- <li><a href="#testimonials">Testimonials</a></li> -->
           <li><a href="index.html#faq">FAQ</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -258,7 +258,7 @@
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
-      <img src="assets/img/ocean-water--background.jpg" alt="">
+      <img src="assets/img/Ocean1.jpg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
