--- a/for-buyers.html
+++ b/for-buyers.html
@@ -50,7 +50,7 @@
           <li><a href="for-buyers.html">Buyers</a></li>
 
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="index.html#team">Leadership</a></li>
+
           <!-- <li><a href="#testimonials">Testimonials</a></li> -->
           <li><a href="index.html#faq">FAQ</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -68,7 +68,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
         
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean5.png" alt="">
           <div class="carousel-container">
             <h2>The Largest Transfer of Wealth Management Practices in History</h2>
             <p>With 35% of advisors retiring in the next 8-10 years, the next decade presents an unprecedented opportunity to acquire high-quality practices. Let Succession Point surgically target acquisitions that match your growth strategy.</p>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-4.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean4.png" alt="">
           <div class="carousel-container">
             <h2>Vast Advisor Network at Your Service</h2>
             <p>Our unmatched network gives you exclusive access to off-market opportunities. We surgically target practices that align with your acquisition preferences, investment philosophy, and growth objectives.</p>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
+          <img src="assets/img/hero-carousel/Ocean3.png" alt="">
           <div class="carousel-container">
             <h2>Accelerate Growth Through Strategic Acquisitions</h2>
             <p>When organic growth becomes challenging, inorganic growth through acquisitions offers immediate scale. We guide you through due diligence, funding, negotiations, and integration for successful practice acquisitions.</p>
@@ -151,10 +151,10 @@
     <section id="targeting" class="about section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Strategic Acquisition Opportunities</h2>
         <p>Capitalize on the unprecedented transfer of wealth management practices</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container">
 
@@ -196,76 +196,8 @@
         </div>
 
       </div>
-    </section><!-- /About Section -->
-
-    <!-- Stats Section -->
-    <section id="stats" class="stats section" style="background: linear-gradient(
-164deg, #000000 0%, #797979 100%);">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-            <div class="row gy-5">
-              <!-- Left Column -->
-              <div class="col-md-6">
-                <div class="row gy-4">
-                  <div class="col-12">
-                    <div class="stats-item text-white p-4">
-                      <div class="d-flex align-items-baseline">
-                        <span class="display-4 fw-bold">$</span>
-                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1">64</span>
-                        <span class="h3 ms-2 text-white-50">Billion+</span>
-                      </div>
-                      <h4 class="mt-2 mb-3 text-white fw-semibold">Assets Under Advisory</h4>
-                      <p class="mb-0 text-white-50">Over $64 billion in advisor transitions facilitated in the last 3 years, demonstrating our deep market expertise</p>
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <div class="stats-item text-white p-4">
-                      <div class="d-flex align-items-baseline">
-                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="35" data-purecounter-duration="1">35</span>
-                        <span class="display-4 ms-1">%</span>
-                      </div>
-                      <h4 class="mt-2 mb-3 text-white fw-semibold">Advisors Retiring Soon</h4>
-                      <p class="mb-0 text-white-50">Over one-third of advisors retiring in the next 8-10 years creates unprecedented acquisition opportunities</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Right Column -->
-              <div class="col-md-6">
-                <div class="row gy-4">
-                  <div class="col-12">
-                    <div class="stats-item text-white p-4">
-                      <div class="d-flex align-items-baseline">
-                        <span class="display-4 fw-bold">$</span>
-                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1">20</span>
-                        <span class="h3 ms-2 text-white-50">Billion</span>
-                      </div>
-                      <h4 class="mt-2 mb-3 text-white fw-semibold">Recent Deal Volume</h4>
-                      <p class="mb-0 text-white-50">$20 billion in successful practice transitions closed in the last 3 years through our network</p>
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <div class="stats-item text-white p-4">
-                      <div class="d-flex align-items-baseline">
-                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1">21</span>
-                        <span class="h4 ms-2 text-white-50">Deals</span>
-                      </div>
-                      <h4 class="mt-2 mb-3 text-white fw-semibold">Recent Transactions</h4>
-                      <p class="mb-0 text-white-50">21 successful practice acquisitions completed in just the last 16 months, proving our active market presence</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </section><!-- /Stats Section -->
+    </section> -->
+    <!-- /About Section -->
 
     <!-- Services Section -->
     <section id="advantages" class="services section">
@@ -345,6 +277,77 @@
       </div>
 
     </section><!-- /Services Section -->
+
+    <!-- Stats Section -->
+    <section id="stats" class="stats section" style="background: linear-gradient(
+164deg, #000000 0%, #797979 100%);">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <div class="row gy-5">
+              <!-- Left Column -->
+              <div class="col-md-6">
+                <div class="row gy-4">
+                  <div class="col-12">
+                    <div class="stats-item text-white p-4">
+                      <div class="d-flex align-items-baseline">
+                        <span class="display-4 fw-bold">$</span>
+                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1">64</span>
+                        <span class="h3 ms-2 text-white-50">Billion+</span>
+                      </div>
+                      <h4 class="mt-2 mb-3 text-white fw-semibold">Assets Under Advisory</h4>
+                      <p class="mb-0 text-white-50">Over $64 billion in advisor transitions facilitated in the last 3 years, demonstrating our deep market expertise</p>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="stats-item text-white p-4">
+                      <div class="d-flex align-items-baseline">
+                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="35" data-purecounter-duration="1">35</span>
+                        <span class="display-4 ms-1">%</span>
+                      </div>
+                      <h4 class="mt-2 mb-3 text-white fw-semibold">Advisors Retiring Soon</h4>
+                      <p class="mb-0 text-white-50">Over one-third of advisors retiring in the next 8-10 years creates unprecedented acquisition opportunities</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Right Column -->
+              <div class="col-md-6">
+                <div class="row gy-4">
+                  <div class="col-12">
+                    <div class="stats-item text-white p-4">
+                      <div class="d-flex align-items-baseline">
+                        <span class="display-4 fw-bold">$</span>
+                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1">20</span>
+                        <span class="h3 ms-2 text-white-50">Billion</span>
+                      </div>
+                      <h4 class="mt-2 mb-3 text-white fw-semibold">Recent Deal Volume</h4>
+                      <p class="mb-0 text-white-50">$20 billion in successful practice transitions closed in the last 3 years through our network</p>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="stats-item text-white p-4">
+                      <div class="d-flex align-items-baseline">
+                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1">21</span>
+                        <span class="h4 ms-2 text-white-50">Deals</span>
+                      </div>
+                      <h4 class="mt-2 mb-3 text-white fw-semibold">Recent Transactions</h4>
+                      <p class="mb-0 text-white-50">21 successful practice acquisitions completed in just the last 16 months, proving our active market presence</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /Stats Section -->
+
+    
 
     <!-- Process Section -->
     <section id="process" class="services section light-background">
@@ -479,7 +482,7 @@
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
-      <img src="assets/img/ocean-water--background.jpg" alt="">
+      <img src="assets/img/Ocean1.jpg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -495,88 +498,6 @@
 
     </section><!-- /Call To Action Section -->
 
-    <!-- Faq Section -->
-    <!-- <section id="faq" class="faq section">
-
-
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Common Buyer Questions</h2>
-        <p>Everything you need to know about acquiring a practice</p>
-      </div>
-
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="faq-container">
-
-              <div class="faq-item">
-                <h3>What size practice should I acquire?</h3>
-                <div class="faq-content">
-                  <p>The ideal acquisition size depends on your current AUM, infrastructure capacity, and growth goals. We typically recommend acquiring practices that are 25-50% of your current size for optimal integration.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-
-              <div class="faq-item">
-                <h3>How do I finance an acquisition?</h3>
-                <div class="faq-content">
-                  <p>Options include SBA loans, bank financing, seller financing, earnouts, or strategic partner capital. We help structure deals that minimize upfront cash requirements while aligning seller interests.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-
-              <div class="faq-item">
-                <h3>What's the typical client retention rate?</h3>
-                <div class="faq-content">
-                  <p>With proper transition planning, client retention typically exceeds 95%. Key factors include seller involvement post-closing, communication strategy, and service continuity.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="faq-container">
-
-              <div class="faq-item">
-                <h3>How long does the acquisition process take?</h3>
-                <div class="faq-content">
-                  <p>From initial introduction to closing typically takes 3-9 months. This includes due diligence, negotiations, financing arrangements, and regulatory approvals.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-
-              <div class="faq-item">
-                <h3>How do you value a practice?</h3>
-                <div class="faq-content">
-                  <p>Valuations typically range from 3-16x recurring revenue, depending on client demographics, revenue quality, growth trajectory, and deal structure. We provide comprehensive valuation analysis.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-
-              <div class="faq-item">
-                <h3>Should the seller stay on post-acquisition?</h3>
-                <div class="faq-content">
-                  <p>A transition period of 6-24 months typically ensures optimal client retention. We help structure consulting agreements that incentivize smooth handoffs.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-
-    </section> -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section light-background">
