--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -49,8 +49,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="index.html#team">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
