--- a/for-sellers.html
+++ b/for-sellers.html
@@ -70,7 +70,7 @@
           <div class="carousel-container">
             <h2>Don't Leave Money on the Table</h2>
             <p style="text-align: center">Your practice represents decades of hard work and client relationships. With expert guidance at ZERO COST to you, maximize your return and protect your legacy. We're incentivized to achieve the highest valuation possible because we only succeed when you're satisfied and your deal closes successfully.</p>
-            <!-- <a href="#featured-services" class="btn-get-started">Learn More</a> -->
+            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div>
 
@@ -79,7 +79,7 @@
           <div class="carousel-container">
             <h2>30% Higher Valuations</h2>
             <p style="text-align: center">Advisors using professional M&A guidance achieve 30% higher valuations on average. Our advisor network creates competitive bidding that drives up your practice value.</p>
-            <!-- <a href="#featured-services" class="btn-get-started">Learn More</a> -->
+            <a href="index.html#contact" class="btn-get-started">Learn More</a>
           </div>
         </div>
 
@@ -88,7 +88,7 @@
           <div class="carousel-container">
             <h2>Your Success is Our Success</h2>
             <p style="text-align: center">We only get paid when you are happy and close your deal. Our incentives are perfectly aligned - we fight for every dollar of value in your practice. All at absolutely no cost to you.</p>
-            <!-- <a href="#featured-services" class="btn-get-started">Learn More</a> -->
+            <a href="index.html#contact" class="btn-get-started">Get In Touch</a>
           </div>
         </div>
 
@@ -262,9 +262,9 @@
                   <div class="col-12">
                     <div class="stats-item text-white p-4">
                       <div class="d-flex align-items-baseline">
-                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1">9 Months</span>
+                        <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1">3-9 Months</span>
                       </div>
-                      <h4 class="mt-2 mb-3 text-white fw-semibold">Faster Transaction Closing</h4>
+                      <h4 class="mt-2 mb-3 text-white fw-semibold">Average Time to Close</h4>
                       <p class="mb-0 text-white-50">Our streamlined process closes deals in 3-9 months versus multiple years for unrepresented sellers</p>
                     </div>
                     
@@ -344,7 +344,7 @@
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
-      <img src="assets/img/Ocean1.jpg" alt="">
+      <img src="assets/img/hero-carousel/Ocean1.jpg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -662,7 +662,7 @@
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/prism-wealth-management-recruiting/"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/succession-point/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
