--- a/index.html
+++ b/index.html
@@ -590,10 +590,12 @@
                 </div>
               </div>
               <div class="member-bio">
-                <h5>Founder & CEO</h5>
-                <p>Michele Mandeville, Founder of PRISM Wealth Management Recruiting, established Succession Point in 2018 to meet the emerging need for broad expertise in the Wealth Management M&A, Monetization and Succession space. <br> <br> 
-                  Combining decades of industry consulting, recruiting and marketing expertise, PRISM Wealth Management Recruiting and Succession Point offer customized solutions for Financial Advisors and unparalleled, valuable services as trusted partners to Wealth Management Firms. <br> <br> 
-                  In 1994, Michele founded PRISM Wealth Management Recruiting, an elite consulting firm specialized in the Wealth Management industry.​ Since its inception, Michele has advised thousands of Financial Advisors and Wealth Management firms, offering her industry knowledge and insights to facilitate their vision of success.</p>
+                <h5>Founder, Succession Point |<br>Founder, PRISM Wealth Management Recruiting</h5>
+                <p>Michele Mandeville is a seasoned leader in the Wealth Management industry, with over three decades of experience in consulting, recruiting, and strategic marketing. In 1994, she founded PRISM Wealth Management Recruiting, an elite consulting firm that has since become a trusted resource for Financial Advisors and Wealth Management firms nationwide. Michele has personally advised thousands of professionals and firms, helping them realize their goals through deep industry insight and personalized guidance.
+                  <br><br>
+                  In 2018, recognizing the growing demand for expert guidance in mergers and acquisitions, monetization, and succession planning, Michele launched Succession Point. The firm was established to meet the evolving needs of the Wealth Management space by providing comprehensive, customized solutions for Financial Advisors and firms navigating complex transitions.
+                  <br><br>
+                  Together, PRISM Wealth Management Recruiting and Succession Point deliver unmatched value as trusted partners, offering tailored strategies and services that empower clients to thrive in a dynamic financial landscape.
                 <p class="member-email"><i class="bi bi-envelope"></i> mmandeville@successionpoint.com</p>
               </div>
             </div>
