--- a/for-buyers.html
+++ b/for-buyers.html
@@ -70,7 +70,7 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/Ocean5.png" alt="">
           <div class="carousel-container">
-            <h2 style="text-align: center;">The Largest Transfer of Wealth Management Practices <br>In History</h2>
+            <h2 style="text-align: center;">The Largest Transfer of Wealth <br> Management Practices In History</h2>
             <p style="text-align: center;">With 35% of advisors retiring in the next 8-10 years, the next decade presents an unprecedented opportunity to acquire high-quality practices. Let Succession Point surgically target acquisitions that match your growth strategy.</p>
             <a href="index.html#contact" class="btn-get-started">Start Growing</a>
           </div>
