--- a/for-sellers.html
+++ b/for-sellers.html
@@ -36,7 +36,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 200px"> -->
-        <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 200px">
+        <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 275px">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -63,14 +63,13 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-      <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+      <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="10000">
         
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/Ocean1.jpg" alt="">
           <div class="carousel-container">
             <h2>Don't Leave Money on the Table</h2>
             <p style="text-align: center">Your practice represents decades of hard work and client relationships. With expert guidance at ZERO COST to you, maximize your return and protect your legacy. We're incentivized to achieve the highest valuation possible because we only succeed when you're satisfied and your deal closes successfully.</p>
-            <a href="index.html#contact" class="btn-get-started">Get Started</a>
           </div>
         </div>
 
@@ -79,7 +78,6 @@
           <div class="carousel-container">
             <h2>30% Higher Valuations</h2>
             <p style="text-align: center">Advisors using professional M&A guidance achieve 30% higher valuations on average. Our advisor network creates competitive bidding that drives up your practice value.</p>
-            <a href="index.html#contact" class="btn-get-started">Learn More</a>
           </div>
         </div>
 
@@ -88,7 +86,6 @@
           <div class="carousel-container">
             <h2>Your Success is Our Success</h2>
             <p style="text-align: center">We only get paid when you are happy and close your deal. Our incentives are perfectly aligned - we fight for every dollar of value in your practice. All at absolutely no cost to you.</p>
-            <a href="index.html#contact" class="btn-get-started">Get In Touch</a>
           </div>
         </div>
 
@@ -192,7 +189,7 @@
               <i class="bi bi-people-fill icon flex-shrink-0"></i>
               <div>
                 <h4 class="title">Limited Buyer Pool</h4>
-                <p class="description">Without our 300,000+ advisor network, you're negotiating with only a handful of buyers, eliminating competitive tension.</p>
+                <p class="description">Without our extensive buyer network, you're limited to negotiating with just a few potential buyers, which removes competitive pressure and severely restricts your opportunities.</p>
               </div>
             </div>
           </div>
@@ -631,7 +628,7 @@
               </button>
               <p class="mt-3 text-muted small">
                 <i class="bi bi-shield-check me-1"></i>
-                Your information is 100% confidential and secure
+                Your information is 100% confidential
               </p>
             </div>
 
@@ -650,7 +647,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" alt="" style="width: 100px;">
+            <span class="sitename">Succession Point</span>
           </a>
           <div class="footer-contact pt-3">
             <p>Premier M&A Advisory</p>
@@ -659,9 +656,9 @@
             <p><strong>Email:</strong> <span>team@successionpoint.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a> -->
             <a href="https://www.linkedin.com/company/succession-point/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
@@ -671,23 +668,13 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#about">About us</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html#services">Services</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="index.html#services">Practice Acquisitions</a></li>
-            <li><a href="index.html#services">Practice Monetization</a></li>
-            <li><a href="index.html#services">Practice Sales</a></li>
-            <li><a href="index.html#services">Strategic Partnerships</a></li>
-            <li><a href="index.html#services">Practice Valuations</a></li>
-          </ul>
-        </div>
 
-        <div class="col-lg-4 col-md-12 footer-newsletter">
+
+        <!-- <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
           <form action="forms/newsletter.php" method="post" class="php-email-form">
@@ -696,7 +683,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Your subscription request has been sent. Thank you!</div>
           </form>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -704,6 +691,10 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Succession Point</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
       </div>
     </div>
