--- a/thank-you.html
+++ b/thank-you.html
@@ -278,7 +278,7 @@
             <span class="sitename">Succession Point</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Premier M&A Advisory</p>
+            <p>Premier M&A Consultants</p>
             <p>for Financial Advisors</p>
             <p class="mt-3"><strong>Consultations:</strong> <span>By Appointment</span></p>
             <p><strong>Email:</strong> <span>team@successionpoint.com</span></p>
