--- a/for-sellers.html
+++ b/for-sellers.html
@@ -69,7 +69,7 @@
           <img src="assets/img/hero-carousel/Ocean1.jpg" alt="">
           <div class="carousel-container">
             <h2>Don't Leave Money on the Table</h2>
-            <p style="text-align: center">Your practice represents decades of hard work and client relationships. With expert guidance at ZERO COST to you, maximize your return and protect your legacy. We're incentivized to achieve the highest valuation possible because we only succeed when you're satisfied and your deal closes successfully.</p>
+            <p style="text-align: center">Your practice represents decades of dedication and client trust. Our expert guidance maximizes your enterprise value while protecting your legacy. We're motivated to secure the highest valuation because our success depends entirely on your satisfaction and successful deal completion.</p>
           </div>
         </div>
 
@@ -647,7 +647,7 @@
             <span class="sitename">Succession Point</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Premier M&A Advisory</p>
+            <p>Premier M&A Consultants</p>
             <p>for Financial Advisors</p>
             <p class="mt-3"><strong>Consultations:</strong> <span>By Appointment</span></p>
             <p><strong>Email:</strong> <span>team@successionpoint.com</span></p>
