--- a/for-buyers.html
+++ b/for-buyers.html
@@ -303,8 +303,10 @@
                       <div class="d-flex align-items-baseline">
                         <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="35" data-purecounter-duration="1">35</span>
                         <span class="display-4 ms-1">%</span>
+                        <span class="h3 ms-2 text-white-50">Advisors</span>
+
                       </div>
-                      <h4 class="mt-2 mb-3 text-white fw-semibold">Advisors Retiring Soon</h4>
+                      <h4 class="mt-2 mb-3 text-white fw-semibold">Retiring Soon</h4>
                       <p class="mb-0 text-white-50">Over one-third of advisors retiring in the next 8-10 years creates unprecedented acquisition opportunities</p>
                     </div>
                   </div>
