--- a/for-sellers.html
+++ b/for-sellers.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>For Sellers - Succession Point | Maximize Your Practice Value</title>
   <meta name="description" content="Succession Point guides financial advisors through practice sales with zero cost, maximizing valuations and avoiding costly pitfalls. Expert M&A support for the most important decision of your career.">
-  <meta name="keywords" content="sell financial advisor practice, practice valuation, succession planning, M&A advisory, zero cost consultation">
+  <meta name="keywords" content="sell financial advisor practice, practice valuation, succession planning, M&A consulting, zero cost consultation">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -550,7 +550,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center info-item-borders">
               <i class="bi bi-telephone"></i>
               <h3>Call Us</h3>
-              <p>+1 (407) 980-8212</p>
+              <p>+1 (407) 920-8212</p>
             </div>
           </div><!-- End Info Item -->
 
