--- a/service-details.html
+++ b/service-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Our Services - Succession Point | M&A Expertise for Financial Advisors</title>
-  <meta name="description" content="Succession Point provides M&A advisory services for financial advisors looking to buy, sell, or monetize their wealth management practices.">
+  <meta name="description" content="Succession Point provides M&A consulting services for financial advisors looking to buy, sell, or monetize their wealth management practices.">
   <meta name="keywords" content="financial advisor M&A, practice acquisition, succession planning, wealth management, strategic partnerships">
 
   <!-- Favicons -->
@@ -73,7 +73,7 @@
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.jpg);">
       <div class="container position-relative">
         <h1>Our Services</h1>
-        <p>Expert M&A Advisory for Financial Advisors - Navigate the Largest Transfer of Wealth Management Practices in History</p>
+        <p>Expert M&A Consulting for Financial Advisors - Navigate the Largest Transfer of Wealth Management Practices in History</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -314,7 +314,7 @@
             <li><a href="#">Strategic Partnerships</a></li>
             <li><a href="#">Succession Planning</a></li>
             <li><a href="#">Practice Valuation</a></li>
-            <li><a href="#">M&A Advisory</a></li>
+            <li><a href="#">M&A Consulting</a></li>
           </ul>
         </div>
 
